--- a/src/style.scss
+++ b/src/style.scss
@@ -1,14 +1,65 @@
+html {
+  margin: 0;
+  padding: 0;
+}
+
 body {
 
-  color: white;
+  font-family: sans-serif;
 
-  menu {
+  padding-top: 40px;
+
+  nav {
     display: block;
     position: fixed;
+    left: 0;
+    top: 0;
     background-color: lightblue;
-    width:100%;
-    height:30px;
+    width: 100%;
+    padding: 10px;
   }
 
+  main {
+    display: grid;
+    grid-template-columns: repeat(8, 1fr);
+    grid-gap: 10px;
+    grid-auto-rows: 100px;
+    align-items: stretch;
+    grid-template-areas:
+            "a a a a a a a a"
+            "b b b b b b b b"
+            "c c c c c c c c"
+            "c c c c c c c c";
+    @media (min-width: 641px) {
+      grid-template-areas:
+              "a a a a b b b b"
+              "a a a a b b b b"
+              "c c c c c c c c"
+              "c c c c c c c c";
+    }
+    @media (min-width: 1008px) {
+      grid-template-areas:
+              "a a a b b b b b"
+              "a a a b b b b b"
+              "a a a b b b b b"
+              "c c c c c c c c";
+    }
+    section {
+      &.first {
+        grid-area: a;
+        background-color: orangered;
+      }
+
+      &.second {
+        grid-area: b;
+        background-color: lightskyblue;
+      }
+
+      &.third {
+        grid-area: c;
+        background-color: rebeccapurple;
+      }
+    }
+  }
 }
 
